add user id column

--- a/eda/DMC_EDA_Categories.ipynb
+++ b/eda/DMC_EDA_Categories.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DMC_EDA_Categories.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXGyh6KI5FSF+1o6ZTjbhQ",
+      "authorship_tag": "ABX9TyPcSGazQmbnS7J3lB9IqNPK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6542,13 +6542,13 @@
     {
       "cell_type": "code",
       "source": [
-        "users_til_nov.to_csv('users_til_nov.csv', sep='|', index=False)\n",
-        "users_til_dec.to_csv('users_til_dec.csv', sep='|', index=False)"
+        "users_til_nov.to_csv('users_til_nov.csv', sep='|')\n",
+        "users_til_dec.to_csv('users_til_dec.csv', sep='|')"
       ],
       "metadata": {
         "id": "fmJ2DWXzPodJ"
       },
-      "execution_count": 35,
+      "execution_count": 36,
       "outputs": []
     }
   ]
